[project]
name = "pycommon"
version = "0.1.0"
description = "Reusable platform library: config, logging, telemetry, security, storage, HTTP, runtime, persistence"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "structlog>=25.3.0",
    "ecs-logging>=2.2.0",
    "opentelemetry-api>=1.34.0",
    "anyio>=4.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
http = [
    "fastapi>=0.115.0",
    "starlette>=0.46.0",
    "httpx>=0.28.0",
]
storage = [
    "aioboto3>=14.0.0",
]
security = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "PyJWT[crypto]>=2.10.0",
]
telemetry = [
    "opentelemetry-sdk>=1.34.0",
    "opentelemetry-exporter-otlp>=1.34.0",
    "opentelemetry-instrumentation-fastapi>=0.55b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.55b0",
    "opentelemetry-instrumentation-redis>=0.55b0",
    "opentelemetry-instrumentation-pymongo>=0.55b0",
    "opentelemetry-instrumentation-celery>=0.55b0",
    "opentelemetry-instrumentation-httpx>=0.55b0",
    "opentelemetry-instrumentation-asgi>=0.55b0",
    "opentelemetry-instrumentation-grpc>=0.55b0",
    "fastapi>=0.115.0",
]
grpc = [
    "grpcio>=1.71.0",
    "opentelemetry-instrumentation-grpc>=0.55b0",
]
runtime = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "grpcio>=1.71.0",
]
persistence = [
    "sqlalchemy[asyncio]>=2.0.40",
]
cache = [
    "redis>=5.0.0",
]
profiling = [
    "fastapi_profiler>=1.5.0",
]
all = [
    "pycommon[http,storage,security,telemetry,grpc,runtime,persistence,cache,profiling]",
]
dev = [
    "ruff>=0.12.0",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.2.0",
    "aiosqlite>=0.21.0",
    "fakeredis[lua]>=2.29.0",
    # Starlette TestClient prefers httpx2 (StarletteDeprecationWarning otherwise).
    "httpx2>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pycommon"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
    "C4",
    "PERF",
    "RUF",
    "ASYNC",
    "S",
    "PTH",
]
ignore = [
    "S101",
    "S104",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "S105", "S106"]
"**/security/**" = ["B008"]
"**/config/**" = ["S105"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
mypy_path = ["src"]
packages = ["pycommon"]

[[tool.mypy.overrides]]
module = [
    "aioboto3.*",
    "botocore.*",
    "ecs_logging.*",
    "grpc.*",
    "fastapi_profiler.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--import-mode=importlib -q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/pycommon"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
